--- a/clase1.html
+++ b/clase1.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New password</title>
+    <link rel="stylesheet" href="./css/clase1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="login">
         <div class="form-container">
-            <img src="" alt="logotipo" class="logo">
+            <img src="./logos/logo_yard_sale.svg" alt="logotipo" class="logo">
 
             <h1 class="title">Create a new password</h1>
             <p class="subtitle">Enter a new password for your account</p>
 
             <form action="" class="form">
-                <label for="password" class="label">password</label>
+                <label for="password" class="label">Password</label>
                 <input type="password" id="password" name="new-password" placeholder="*********" class="input input-password">
 
                 <label for="new-password" class="label">Re-enter password</label>
