Creación pantalla menu web desktop y mobile

--- a/clase11.html
+++ b/clase11.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <img src="./icons/icon_menu.svg" alt="menu">
+            <img src="./icons/icon_menu.svg" alt="menu" class="menu">
 
             <div class="navbar-left">
                 <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
@@ -41,11 +41,13 @@
             </div>
 
             <div class="navbar-right">
-                <li>dsardila1809@hotmail.com</li>
-                <li class="navbar-shopping-card">
-                    <img src="./icons/icon_shopping_cart.svg" alt="shopping card">
-                    <div>2</div>
-                </li>
+                <ul>
+                    <li class="navbar-email">dsardila1809@hotmail.com</li>
+                    <li class="navbar-shopping-card">
+                        <img src="./icons/icon_shopping_cart.svg" alt="shopping card">
+                        <div>2</div>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
